deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indra-replica
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80

          # Probe
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5 # Mulai cek setelah 5 detik
            periodSeconds: 10 # Cek ulang setiap 10 detik
            successThreshold: 1 # berapa kali pengecekan  dinyatakan sukses
            failureThreshold: 3 # berapa kali pengecekan dinyatakan gagal
