node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx

spec:
  nodeSelector:
    indramahesa.com/node-type: gpu
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80

      # Probe
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 5 # Mulai cek setelah 5 detik
        periodSeconds: 10 # Cek ulang setiap 10 detik
        successThreshold: 1 # berapa kali pengecekan  dinyatakan sukses
        failureThreshold: 3 # berapa kali pengecekan dinyatakan gagal
