pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx

  # Labels untuk selector / grouping
  labels:
    team: finance
    version: 1.0.0
    environment: development

  # Annotations dapat menyimpan macam tipe data
  annotations:
    description: "ini adalah aplikasi indra mahesa"
    mycompany.com/build-info: |
      {
        "buildNumber": 123,
        "gitSha": "7f65d2a1",
        "environment": "production"
      }

spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
