node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: indra-service
spec:
  type: NodePort
  selector:
    indramahesa.com/app: backend
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indra-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      indramahesa.com/app: backend
  template:
    metadata:
      name: nginx
      labels:
        indramahesa.com/app: backend
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
