service.yaml
apiVersion: v1
kind: Service
metadata:
  name: indra-service
spec:
  selector:
    indramahesa.com/app: backend
  ports:
    - port: 8080
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indra-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      indramahesa.com/app: backend
  template:
    metadata:
      name: nginx
      labels:
        indramahesa.com/app: backend
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: alpine-curl
spec:
  containers:
    - name: alpine-curl
      image: alpine/curl
      command: ["sh", "-c", "tail -f /dev/null"]
