ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: indra-service
spec:
  selector:
    indramahesa.com/app: backend
  ports:
    - port: 8080
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indra-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      indramahesa.com/app: backend
  template:
    metadata:
      name: nginx
      labels:
        indramahesa.com/app: backend
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: indra-ingress
spec:
  rules:
    - host: nginx.indramahesa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: indra-service
                port:
                  number: 8080
